# MarsRoverFirmware

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  build_configurations_helper.py  makefile  mbed-os.cmake  mbed_app.json  mbed_config.h  supported_build_configurations.yaml  supported_build_configurations.yml  toolchain.cmake
.github/: dependabot.yml
.metadata/: version.ini
apps/: neoPixel.cpp  neoPixel.h
apps/arm/: ArmConfig.h  CMakeLists.txt  ClawController.cpp  ClawController.h  DifferentialWristController.cpp  DifferentialWristController.h  arm_config.h  main.cpp
apps/arm/include/: ArmConfig.h  ClawConfig.h  ClawController.h  DifferentialWristController.h  ElbowConfig.h  ShoulderConfig.h  TooltipConfig.h  TurntableConfig.h  WristConfig.h
apps/arm/src/: ClawController.cpp  DifferentialWristController.cpp  main.cpp
apps/gimbal/: CMakeLists.txt  GimbalConfig.h  main.cpp
apps/gimbal/include/: .PanConfig.h.swp  PanConfig.h  PitchConfig.h  RollConfig.h
apps/gimbal/src/: main.cpp
apps/gimbtonomy/: CMakeLists.txt  GimbtonomyConfig.h  LEDMatrix.cpp  LEDMatrix.h  main.cpp
apps/gimbtonomy/include/: GimbtonomyConfig.h  PanConfig.h  PitchConfig.h  RollConfig.h
apps/gimbtonomy/src/: main.cpp
apps/pdb/: CMakeLists.txt
apps/pdb/include/: PDB_config.h
apps/pdb/src/: main.cpp
apps/science/: CMakeLists.txt  ScienceConfig.h  main.cpp
apps/science/include/: CentrifugeConfig.h  CoverConfig.h  DiggerConfig.h  ElevatorConfig.h  ScienceConfig.h
apps/science/src/: main.cpp
apps/test-BQ40Z80/: CMakeLists.txt
apps/test-BQ40Z80/src/: main.cpp
apps/test-actuator-controller/: CMakeLists.txt  PIDTuningApi.cpp  PIDTuningApi.h  main.cpp
apps/test-actuator-controller/src/: main.cpp
apps/test-adafruitSTEMMA/: CMakeLists.txt
apps/test-adafruitSTEMMA/src/: main.cpp
apps/test-blockingneo/: CMakeLists.txt  main.cpp
apps/test-blockingneo/src/: main.cpp
apps/test-can/: CMakeLists.txt  main.cpp
apps/test-can/new-can-rx-test/: main.cpp  main.py  readme.txt
apps/test-can/src/: main.cpp
apps/test-moisture/: CMakeLists.txt  main.cpp
apps/test-moisture/include/: MoistureSensorConfig.h
apps/test-moisture/src/: main.cpp
apps/test-netzer-encoder/: CMakeLists.txt
apps/test-netzer-encoder/include/: Netzer.h  NetzerEncoder.h
apps/test-netzer-encoder/src/: Netzer.cpp  NetzerEncoder.cpp  main.cpp
apps/test-pid/: CMakeLists.txt  main.cpp
apps/test-pid-tuning-api/: CMakeLists.txt  main.cpp  testPIDTuningApi.cpp  testPIDTuningApi.h
apps/test-pid-tuning-api/include/: testPIDTuningApi.h
apps/test-pid-tuning-api/src/: main.cpp  testPIDTuningApi.cpp
apps/test-pid/include/: control.h  feedback.h  setpoint.h  test_data.h
apps/test-pid/src/: delete.txt  main.cpp  othermain.cpp
apps/test-pololu370-encoder/: CMakeLists.txt
apps/test-pololu370-encoder/src/: main.cpp
apps/test-quadrature64cpr/: CMakeLists.txt
apps/test-quadrature64cpr/src/: main.cpp
apps/test-stress-can/: CMakeLists.txt
apps/test-stress-can/include/: CANConfigArm.h  CANConfigGimbal.h  CANConfigPDB.h  CANConfigScience.h
apps/test-stress-can/src/: main.cpp  other.cpp  testCanMechanism.c
apps/test-ultrasonic-driver/: CMakeLists.txt
apps/test-ultrasonic-driver/src/: main.cpp
apps/tutorial-servo-can-control/: CMakeLists.txt  TutorialServo.cpp  TutorialServo.h  main.cpp
apps/tutorial-servo-can-control/include/: TutorialServo.cpp  TutorialServo.h
apps/tutorial-servo-can-control/src/: TutorialServo.cpp  TutorialServo.h  main.cpp
apps/tutorial-servo-pot-control/: CMakeLists.txt
apps/tutorial-servo-pot-control/src/: CMakeLists.txt  main.cpp
config/: can_config.h  mbed_config.h  ros_config.h  rover_config.h
lib/TutorialServo/: CMakeLists.txt  TutorialServo.cpp  TutorialServo.h  fakefile
lib/TutorialServo/Include/: TutorialServo.h
lib/TutorialServo/src/: TutorialServo.cpp
lib/actuators/: CMakeLists.txt
lib/actuators/include/: Actuator.h  BrushlessMotor.h  ContServo.h  DCMotor.h  LimServo.h  Motor.h  Servo.h
lib/actuators/src/: ContServo.cpp  DCMotor.cpp  LimServo.cpp  Motor.cpp
lib/can/: CANBuffer.cpp  CANBuffer.h  CANMsg.h  CANProcessor.h  CMakeLists.txt  CustomCAN.h
lib/can/include/: CANAutogenWrapper.h  CANBuffer.h  CANBus.h  CANInterface.h  CANMsg.h  CANSignal.h
lib/can/src/: CANAutogenWrapper.cpp  CANBuffer.cpp  CANBus.cpp  CANInterface.cpp
lib/controller-inputs/: CMakeLists.txt  DigitalInputGroup.cpp  FrameController.cpp  FrameController.h
lib/controller-inputs/include/: AnalogInputGroup.h  DigitalInputGroup.h  FrameController.h
lib/controller-inputs/src/: AnalogInputGroup.cpp  DigitalInputGroup.cpp  FrameController.cpp
lib/controllers/: ActuatorController.cpp  ActuatorController.h  CANQueue.h  CMakeLists.txt  Motor.cpp  Motor.h  Servo.cpp  Servo.h  ServoMotor.cpp  ServoMotor.h
lib/controllers/include/: ActuatorController.h  ActuatorControllerManager.h  BasicControl.h  Current.h  Motor.h  OpenLoop.h  Position.h  ServoMotor.h  Velocity.h  myactuatorcontroller.h
lib/controllers/src/: ActuatorController.cpp  ActuatorControllerManager.cpp  BasicControl.cpp  Current.cpp  Motor.cpp  OpenLoop.cpp  Position.cpp  ServoMotor.cpp  Velocity.cpp
lib/encoder/: CMakeLists.txt
lib/encoder/include/: AEAT6012.h  Encoder.h  EncoderAbsolute_PWM.h  EncoderRelative_Quadrature.h  MAE3.h  Netzer.h  Pololu37D.h  Quadrature64CPR.h
lib/encoder/src/: AEAT6012.cpp  EncoderAbsolute_PWM.cpp  EncoderRelative_Quadrature.cpp  MAE3.cpp  Netzer.cpp  Pololu37D.cpp  Quadrature64CPR.cpp
lib/gamepad/: CMakeLists.txt
lib/gamepad/include/: AnalogBusIn.h  DigitalInputGroup.h
lib/gamepad/src/: AnalogBusIn.cpp
lib/gpio/: CMakeLists.txt
lib/gpio/include/: LimitSwitch.h  PwmIn.h  QEI.h
lib/gpio/src/: LimitSwitch.cpp  PwmIn.cpp  QEI.cpp
lib/motor/: CMakeLists.txt
lib/motor/include/: DCMotor.h  ServoMotor.h
lib/motor/src/: DCMotor.cpp  ServoMotor.cpp
matlab-pid/: pid_model.slx  pid_model.slxc  smooth_trajectory.mat  test_trajectories.mlx
mbed-os/: CMakeLists.txt  mbed_make_obj_inc  mbedfile
scripts/: can_load_test.py  (+3 more)
(+562 files in other folders)
