add_executable(pdb.${TARGET}-board.elf)
target_sources(pdb.${TARGET}-board.elf PRIVATE src/main.cpp)
target_include_directories(pdb.${TARGET}-board.elf PUBLIC include)
target_link_libraries(pdb.${TARGET}-board.elf PRIVATE uwrt-mars-rover-hw-bridge CANMsg CANBus)
target_set_firmware_properties(pdb.${TARGET}-board.elf)
