add_library(ActuatorControllerManager STATIC)
target_sources(ActuatorControllerManager PRIVATE src/ActuatorControllerManager.cpp)
target_include_directories(ActuatorControllerManager PUBLIC include)
target_link_libraries(ActuatorControllerManager PUBLIC ActuatorController LookupTable uwrt-mars-rover-hw-bridge)
target_set_mbed_dependency(ActuatorControllerManager)

add_library(ActuatorController STATIC)
target_sources(ActuatorController PRIVATE src/ActuatorController.cpp)
target_include_directories(ActuatorController PUBLIC include)
target_link_libraries(ActuatorController PUBLIC PID CurrentSensor Encoder Actuator units)
target_set_mbed_dependency(ActuatorController)

add_library(PositionController STATIC)
target_sources(PositionController PRIVATE src/Position.cpp)
target_include_directories(PositionController PUBLIC include)
target_link_libraries(PositionController PUBLIC ActuatorController)
target_set_mbed_dependency(PositionController)

add_library(VelocityController STATIC)
target_sources(VelocityController PRIVATE src/Velocity.cpp)
target_include_directories(VelocityController PUBLIC include)
target_link_libraries(VelocityController PUBLIC ActuatorController)
target_set_mbed_dependency(VelocityController)

add_library(CurrentController STATIC)
target_sources(CurrentController PRIVATE src/Current.cpp)
target_include_directories(CurrentController PUBLIC include)
target_link_libraries(CurrentController PUBLIC ActuatorController)
target_set_mbed_dependency(CurrentController)

add_library(OpenLoopController STATIC)
target_sources(OpenLoopController PRIVATE src/OpenLoop.cpp)
target_include_directories(OpenLoopController PUBLIC include)
target_link_libraries(OpenLoopController PUBLIC CurrentSensor Encoder Actuator ActuatorController)
target_set_mbed_dependency(OpenLoopController)